# ai-assistant

./: .gitignore  Dockerfile.assistant  README.md  assistant.Dockerfile  config.sample.yaml  config.yaml  devenv.nix  devenv.yaml  docker-compose.yml  environment.yml  main.py  pyproject.toml  questions.ipynb  requirements.txt
.devcontainer/: devcontainer.json
assistant/: audio.py  config.py  main.py
assistant/components/: __init__.py  audio.py  event_bus.py  graph.py  interruptor.py  llm.py  mumble.py  synthesis.py  transcriber.py  util.py  vad.py
assistant/components/mumble/: __init__.py  events.py  mumble.py
assistant/components/recorder/: main.py
assistant/components/shadow/: main.py
assistant/components/system/: events.py  main.py  types.py
assistant/components/transcriber/: main.py  types.py
assistant/components/watchdog/: events.py  main.py
assistant/core/: __init__.py  component.py  config_manager.py  event_bus.py  plugin.py  plugin_manager.py  service.py
assistant/utils/: __init__.py  audio.py  utils.py
assistant/utils/audio/: __init__.py  reshape.py  vad.py
pipelines/: main.py
plugins/mumble/: events.py  plugin.py
plugins/ollama/: plugin.py
plugins/recorder/: events.py  plugin.py
plugins/shadow/: plugin.py
plugins/system/: events.py  plugin.py  types.py
plugins/transcribe/: plugin.py
plugins/transcriber/: plugin.py  types.py
plugins/vad/: events.py  plugin.py
tests/: test_event_bus.py  test_event_bus_parallel.py  test_llm.py  test_mumble.py  test_ollama.py  test_ollama_interrupt.py  test_plugin_manager.py  test_transcriber.py  test_vad.py
